--- a/assets/sass/custom/layout/_footer.sass
+++ b/assets/sass/custom/layout/_footer.sass
@@ -1,4 +1,8 @@
 footer[role="contentinfo"]
+    .logo
+        display: inline-block
+        margin-left: -12px
+        margin-top: -5px
     .nav-link
         line-height: px2rem(22)
     .nav--levels > li
