--- a/layouts/partials/footer/logo.html
+++ b/layouts/partials/footer/logo.html
@@ -1,1 +1,1 @@
-<a href="/"><img src="/assets/images/logo-glyph.svg" alt="{{site.Title}}" width="257" height="158" loading="lazy"></a>
+<a class="logo" href="/"><img src="/assets/images/logo-glyph.svg" alt="{{site.Title}}" width="244" height="150" loading="lazy"></a>
