--- a/assets/sass/custom/layout/_header.sass
+++ b/assets/sass/custom/layout/_header.sass
@@ -6,5 +6,5 @@ header[role="banner"]
             padding-bottom: px2rem(10)
             padding-top: px2rem(10)
     @include media-breakpoint-up(md)
-      .navbar-nav
+      .menu > ul
           margin-right: -$navbar-nav-link-padding-x
