--- a/assets/sass/custom/layout/_footer.sass
+++ b/assets/sass/custom/layout/_footer.sass
@@ -3,6 +3,8 @@ footer[role="contentinfo"]
         display: inline-block
         margin-left: -12px
         margin-top: -5px
+        img
+            height: 160px
     .nav-link
         line-height: px2rem(22)
     .nav--levels > li
