--- a/assets/sass/custom/layout/_header.sass
+++ b/assets/sass/custom/layout/_header.sass
@@ -1,4 +1,7 @@
 header[role="banner"]
+    .logo
+        img
+            height: 42px
     .nav-link
         font-size: px2rem(18)
         @include media-breakpoint-down(lg)
