--- a/assets/sass/custom/layout/_footer.sass
+++ b/assets/sass/custom/layout/_footer.sass
@@ -5,18 +5,19 @@ footer[role="contentinfo"]
         margin-top: -5px
         img
             height: 160px
-    .nav-link
-        line-height: px2rem(22)
-    .nav--levels > li
-        & > a,
-        & > span
-            border-bottom: 1px solid $border-color
-            display: block
-            font-size: $h2-font-size
-            line-height: px2rem(36)
-            padding-bottom: px2rem(10)
-        .nav-level-2 > li
+    nav
+        a
+            line-height: px2rem(22)
+        .nav-levels > li
             & > a,
             & > span
-                font-size: px2rem(18)
-                line-height: px2rem(26)
+                border-bottom: 1px solid $border-color
+                display: block
+                font-size: $h2-font-size
+                line-height: px2rem(36)
+                padding-bottom: px2rem(10)
+            .nav-level-2 > li
+                & > a,
+                & > span
+                    font-size: px2rem(18)
+                    line-height: px2rem(26)
