--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -6,6 +6,7 @@
 @import "custom/layout/footer"
 @import "custom/layout/header"
 @import "custom/components/hero"
+@import "custom/components/person"
 @import "custom/components/toc"
 @import "custom/components/bootstrap/card"
 @import "pages/news"
