--- a/assets/sass/custom/components/_hero.sass
+++ b/assets/sass/custom/components/_hero.sass
@@ -5,3 +5,8 @@
         background-position: right
         background-repeat: no-repeat
         background-size: auto 100%
+
+    > picture
+        img
+            filter: blur(16px) grayscale(100%)
+            mix-blend-mode: overlay
