--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -9,6 +9,7 @@
 @import "custom/components/person"
 @import "custom/components/toc"
 @import "custom/components/bootstrap/card"
-@import "pages/news"
-@import "pages/pages"
-@import "pages/programs"
+@import "custom/pages/news"
+@import "custom/pages/pages"
+@import "custom/pages/person"
+@import "custom/pages/programs"
