--- a/assets/sass/abstracts/_variables.sass
+++ b/assets/sass/abstracts/_variables.sass
@@ -38,8 +38,8 @@ $breadcrumb-active-color: $white
 $breadcrumb-divider-color: $white
 $breadcrumb-margin-bottom: 0
 
-$card-border-width: 0
-$card-spacer-x: 0
+// $card-border-width: 0
+// $card-spacer-x: 0
 $card-title-spacer-y: 0
 
 $dropdown-font-size: px2rem(14)
