--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,8 +1,8 @@
 @import "abstracts/functions"
 @import "abstracts/variables"
 @import "hugo-osuny"
-@import "base/fonts"
 @import "base/typography"
+@import "custom/base/fonts"
 @import "custom/layout/footer"
 @import "custom/layout/header"
 @import "custom/components/hero"
