--- a/assets/sass/abstracts/_variables.sass
+++ b/assets/sass/abstracts/_variables.sass
@@ -6,6 +6,21 @@ $post:      #007960
 $recherche: #EB7100
 $font-family-serif: 'Novela'
 
+$icon-download: "\e900"
+$icon-eye: "\e901"
+$icon-burger: "\e902"
+$icon-link-blank: "\e903"
+$icon-caret: "\e904"
+$icon-arrow: "\e905"
+$icon-arrow-first: "\e906"
+$icon-arrow-last: "\e907"
+$icon-arrow-left: "\e908"
+$icon-arrow-right: "\e909"
+$icon-instagram: "\e90a"
+$icon-facebook: "\e90b"
+$icon-linkedin: "\e90c"
+$icon-twitter: "\e90d"
+
 
 // Bootstrap variables
 $black: #000000
