--- a/assets/sass/custom/abstracts/_variables.sass
+++ b/assets/sass/custom/abstracts/_variables.sass
@@ -32,6 +32,8 @@ $h3-font-size: $font-size-root * 1.3
 $headings-margin-bottom: $grid-gutter-width
 $headings-font-weight: 400
 
+$breadcrumb-active-color: $white
+$breadcrumb-divider-color: $white
 $breadcrumb-font-size: px2rem(13)
 $breadcrumb-margin-bottom: 0
 
