--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,5 +1,5 @@
 @import "abstracts/functions"
-@import "custom/abstracts/variables"
+@import "abstracts/variables"
 @import "hugo-osuny"
 @import "base/typography"
 @import "custom/base/fonts"
