--- a/assets/sass/custom/layout/_header.sass
+++ b/assets/sass/custom/layout/_header.sass
@@ -1,4 +1,9 @@
 header[role="banner"]
+    background-color: white
+    position: sticky
+    top: 0
+    z-index: 10
+    
     .logo
         img
             height: 42px
