--- a/assets/sass/abstracts/_variables.sass
+++ b/assets/sass/abstracts/_variables.sass
@@ -42,6 +42,7 @@ $card-title-spacer-y: 0
 $dropdown-font-size: px2rem(14)
 $dropdown-border-width: 0
 $dropdown-border-radius: 0
+$dropdown-item-padding-x: .75rem
 
 $blockquote-font-size: px2rem(22)
 
@@ -49,6 +50,7 @@ $input-btn-font-family: $font-family-sans-serif
 
 $nav-link-font-size: px2rem(22)
 $nav-link-padding-y: 0
+$nav-link-padding-x: .75rem
 
 $navbar-brand-padding-y: 0
 $navbar-brand-margin-end: 0
