--- a/assets/sass/abstracts/_variables.sass
+++ b/assets/sass/abstracts/_variables.sass
@@ -4,7 +4,6 @@ $institut:  #176CAF
 $diplomes:  #CA0051
 $post:      #007960
 $recherche: #EB7100
-$font-family-serif: 'Novela'
 
 // Bootstrap variables
 $black: #000000
@@ -20,8 +19,7 @@ $border-radius-sm: 0
 
 $grid-gutter-width: 1.5rem
 
-$font-family-sans-serif: 'Aestetico'
-$font-family-base: $font-family-serif
+$font-family-sans-serif: "Avenir Next", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 $font-size-root: 1rem
 $font-size-base: 1.125rem
 $line-height-base: 1.666667
@@ -30,7 +28,7 @@ $h2-font-size: $font-size-root * 1.625
 $h3-font-size: $font-size-root * 1.3
 
 $headings-margin-bottom: $grid-gutter-width
-$headings-font-weight: 400
+$headings-font-weight: 700
 
 $breadcrumb-active-color: $white
 $breadcrumb-divider-color: $white
