--- a/assets/sass/custom/components/_hero.sass
+++ b/assets/sass/custom/components/_hero.sass
@@ -10,3 +10,6 @@
         img
             filter: blur(16px) grayscale(100%)
             mix-blend-mode: overlay
+
+    h1
+        font-weight: 400
