--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,13 +1,12 @@
 @import "abstracts/functions"
 @import "abstracts/variables"
 @import "hugo-osuny"
-@import "base/typography"
-@import "custom/base/fonts"
 @import "custom/layout/footer"
 @import "custom/layout/header"
 @import "custom/components/hero"
 @import "custom/components/menu"
 @import "custom/components/person"
+@import "custom/components/post"
 @import "custom/components/toc"
 @import "custom/components/bootstrap/card"
 @import "custom/pages/news"
