--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -9,7 +9,11 @@
 @import "custom/components/post"
 @import "custom/components/toc"
 @import "custom/components/bootstrap/card"
+@import "custom/pages/administrators"
+@import "custom/pages/authors"
 @import "custom/pages/news"
 @import "custom/pages/pages"
 @import "custom/pages/person"
+@import "custom/pages/persons"
 @import "custom/pages/programs"
+@import "custom/pages/teachers"
