--- a/assets/sass/abstracts/_variables.sass
+++ b/assets/sass/abstracts/_variables.sass
@@ -4,6 +4,7 @@ $institut:  #176CAF
 $diplomes:  #CA0051
 $post:      #007960
 $recherche: #EB7100
+$header-height: 90px
 
 // Bootstrap variables
 $black: #000000
