--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -3,6 +3,7 @@
 @import "hugo-osuny"
 @import "custom/layout/footer"
 @import "custom/layout/header"
+@import "custom/layout/main"
 @import "custom/components/hero"
 @import "custom/components/menu"
 @import "custom/components/person"
