--- a/layouts/partials/persons/list-specific.html
+++ b/layouts/partials/persons/list-specific.html
@@ -4,7 +4,7 @@
       {{ $person := site.GetPage (printf "/persons/%s" .Slug) }}
       {{ if $person }}
         <tr>
-          <th>
+          <th scope="row">
             <a href="{{ .Permalink }}" aria-label="{{ i18n "commons.more_aria" (dict "Title" $person.Title) }}">
               {{- safeHTML $person.Title -}}
             </a>
