--- a/assets/sass/abstracts/_variables.sass
+++ b/assets/sass/abstracts/_variables.sass
@@ -31,6 +31,9 @@ $h3-font-size: $font-size-root * 1.3
 $headings-margin-bottom: $grid-gutter-width
 $headings-font-weight: 700
 
+$lead-font-size: px2rem(22)
+$lead-font-weight: 400
+
 $breadcrumb-active-color: $white
 $breadcrumb-divider-color: $white
 $breadcrumb-font-size: px2rem(13)
