--- a/assets/sass/abstracts/_variables.sass
+++ b/assets/sass/abstracts/_variables.sass
@@ -29,7 +29,10 @@ $h2-font-size: $font-size-root * 1.625
 $h3-font-size: $font-size-root * 1.3
 
 $headings-margin-bottom: $grid-gutter-width
-$headings-font-weight: 700
+$headings-font-weight: 600
+
+$font-weight-bold: 600
+$font-weight-bolder: 600
 
 $lead-font-size: px2rem(22)
 $lead-font-weight: 400
