--- a/assets/sass/custom/layout/_footer.sass
+++ b/assets/sass/custom/layout/_footer.sass
@@ -15,6 +15,7 @@ footer[role="contentinfo"]
                 & > span
                     display: block
                     font-size: $h2-font-size
+                    font-weight: $headings-font-weight
                     line-height: px2rem(36)
                     margin-bottom: px2rem(10)
                     position: relative
