--- a/layouts/partials/persons/list-specific.html
+++ b/layouts/partials/persons/list-specific.html
@@ -6,8 +6,10 @@
       {{ if $person }}
         <tr>
           <th scope="row">
-            <a href="{{ .Permalink }}" aria-label="{{ i18n "commons.more_aria" (dict "Title" $person.Title) }}">
-              {{- safeHTML $person.Title -}}
+            {{ $title := safeHTML (partial "CorrectPunctuation" $person.Title) }}
+            {{ $title = trim $title "\n " }}
+            <a href="{{ .Permalink }}" aria-label="{{ i18n "commons.more_aria" (dict "Title" $title) }}">
+              {{- $title -}}
             </a>
           </th>
           <td>
