--- a/layouts/partials/persons/list.html
+++ b/layouts/partials/persons/list.html
@@ -5,8 +5,10 @@
     {{ range (.Paginate $persons).Pages }}
     <tr>
       <th scope="row">
-        <a href="{{ .Permalink }}" aria-label="{{ i18n "commons.more_aria" (dict "Title" .Title) }}">
-          {{- safeHTML .Title -}}
+        {{ $title := safeHTML (partial "CorrectPunctuation" .Title) }}
+        {{ $title = trim $title "\n " }}
+        <a href="{{ .Permalink }}" aria-label="{{- i18n "commons.more_aria" (dict "Title" $title) -}}">
+          {{- $title -}}
         </a>
       </th>
       <td>
