--- a/assets/sass/custom/components/_toc.sass
+++ b/assets/sass/custom/components/_toc.sass
@@ -1,5 +1,5 @@
 .toc
-    @include media-breakpoint-up(lg)
+    @include media-breakpoint-up(md)
         top: $header-height
     .active
         color: $site
