--- a/assets/sass/custom/layout/_main.sass
+++ b/assets/sass/custom/layout/_main.sass
@@ -1,4 +1,4 @@
 main
-    [itemprop='articleBody']
-        h2
-            scroll-margin-top: $header-height
+    div,
+    h2
+        scroll-margin-top: $header-height
