--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -8,6 +8,7 @@
 @import "custom/components/menu"
 @import "custom/components/person"
 @import "custom/components/post"
+@import "custom/components/program"
 @import "custom/components/toc"
 @import "custom/components/bootstrap/card"
 @import "custom/pages/news"
