--- a/layouts/partials/persons/list-specific.html
+++ b/layouts/partials/persons/list-specific.html
@@ -6,8 +6,8 @@
       {{ if $person }}
         <tr>
           <th scope="row">
-            {{ $title := safeHTML (partial "CorrectPunctuation" $person.Title) }}
-            {{ $title = trim $title "\n " }}
+            {{ $title := trim $person.Title "\n " }}
+            {{ $title = safeHTML (partial "CorrectPunctuation" $title) }}
             <a href="{{ .Permalink }}" aria-label="{{ i18n "commons.more_aria" (dict "Title" $title) }}">
               {{- $title -}}
             </a>
