--- a/layouts/partials/persons/list.html
+++ b/layouts/partials/persons/list.html
@@ -5,8 +5,8 @@
     {{ range (.Paginate $persons).Pages }}
     <tr>
       <th scope="row">
-        {{ $title := safeHTML (partial "CorrectPunctuation" .Title) }}
-        {{ $title = trim $title "\n " }}
+        {{ $title := trim .Title "\n " }}
+        {{ $title = safeHTML (partial "CorrectPunctuation" $title) }}
         <a href="{{ .Permalink }}" aria-label="{{- i18n "commons.more_aria" (dict "Title" $title) -}}">
           {{- $title -}}
         </a>
