--- a/assets/sass/base/_fonts.sass
+++ b/assets/sass/base/_fonts.sass
@@ -1,27 +1,23 @@
-// @font-face
-//     font-display: swap
-//     font-family: 'Avenir Next'
-//     font-style: normal
-//     font-weight: 400
-//     src: url('../fonts/aestetico/font.woff2') format("woff2"), url('../fonts/aestetico/font.woff') format("woff")
+@font-face
+    font-display: swap
+    font-family: 'Montserrat'
+    font-style: italic
+    font-weight: 400
+    src: url('../fonts/montserrat/JTUFjIg1_i6t8kCHKm459Wx7xQYXK0vOoz6jq6R9WXh0oJC8MLnbtg.woff') format('woff')
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
 
-// @font-face
-//     font-display: swap
-//     font-family: 'Novela'
-//     font-style: normal
-//     font-weight: 400
-//     src: url('../fonts/novela/Novela-Regular.woff2') format("woff2"), url('../fonts/novela/Novela-Regular.woff') format("woff")
-//
-// @font-face
-//     font-display: swap
-//     font-family: 'Novela'
-//     font-style: italic
-//     font-weight: 400
-//     src: url('../fonts/novela/Novela-RegularItalic.woff2') format("woff2"), url('../fonts/novela/Novela-RegularItalic.woff') format("woff")
-//
-// @font-face
-//     font-display: swap
-//     font-family: 'Novela'
-//     font-style: normal
-//     font-weight: 700
-//     src: url('../fonts/novela/Novela-Bold.woff2') format("woff2"), url('../fonts/novela/Novela-Bold.woff') format("woff")
+@font-face
+    font-display: swap
+    font-family: 'Montserrat'
+    font-style: normal
+    font-weight: 400
+    src: url('../fonts/montserrat/JTUSjIg1_i6t8kCHKm459WlhyyTh89Y.woff2') format('woff2')
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
+
+@font-face
+    font-display: swap
+    font-family: 'Montserrat'
+    font-style: normal
+    font-weight: 600
+    src: url('../fonts/montserrat/JTUSjIg1_i6t8kCHKm459WlhyyTh89Y.woff2') format('woff2')
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
