--- a/assets/sass/abstracts/_variables.sass
+++ b/assets/sass/abstracts/_variables.sass
@@ -53,6 +53,8 @@ $blockquote-font-size: px2rem(22)
 
 $input-btn-font-family: $font-family-sans-serif
 
+$modal-backdrop-opacity: .9
+
 $nav-link-font-size: px2rem(22)
 $nav-link-padding-y: 0
 $nav-link-padding-x: .75rem
