--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,7 +7,11 @@
     {{ partial "head/seo.html" . }}
     {{ partial "head/rss.html" . }}
   </head>
-  <body class="{{ .Type }}__{{ .Kind }}"{{ if eq .Kind "section" }} data-bs-spy="scroll" data-bs-offset="91" data-bs-target="#nav-toc" data-bs-offset="5"{{ end }}>
+  {{ $bodyclass := printf "%s__%s" .Type .Kind }}
+  {{ if .Params.bodyclass }}
+    {{ $bodyclass = printf "%s %s" $bodyclass .Params.bodyclass }}
+  {{ end }}
+  <body class="{{ $bodyclass }}"{{ if eq .Kind "section" }} data-bs-spy="scroll" data-bs-offset="91" data-bs-target="#nav-toc"{{ end }}>
     {{- partial "header/accessibility.html" -}}
     {{- partial "header/header.html" -}}
     <main id="main" role="main" tabindex="-1">
@@ -16,5 +20,6 @@
     {{- partial "footer/footer.html" . -}}
     {{- partial "footer/cookie-banner.html" . -}}
     {{- partial "footer/js.html" . -}}
+    {{- partial "footer/script.html" . -}}
   </body>
 </html>
