--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,17 +1,16 @@
-@import "hugo-osuny"
+@import "_theme/hugo-osuny"
 
-@import "custom/layout/footer"
-@import "custom/layout/header"
-@import "custom/layout/main"
+@import "_default/layouts/footer"
+@import "_default/layouts/header"
+@import "_default/layouts/main"
 
-@import "custom/components/bootstrap/card"
-@import "custom/components/hero"
-@import "custom/components/menu"
-@import "custom/components/person"
-@import "custom/components/post"
-@import "custom/components/program"
-@import "custom/components/toc"
+@import "_default/partials/hero"
+@import "_default/partials/menu"
+@import "_default/partials/toc"
 
-@import "custom/pages/news"
-@import "custom/pages/pages"
-@import "custom/pages/programs"
+@import "pages/pages"
+@import "persons/widgets"
+@import "posts/pages"
+@import "posts/widgets"
+@import "programs/pages"
+@import "programs/widgets"
