--- a/assets/sass/_theme/_default/_configuration.sass
+++ b/assets/sass/_theme/_default/_configuration.sass
@@ -6,6 +6,8 @@ $post:      #007960
 $recherche: #EB7100
 $header-height: 90px
 
+$menu-background-color: white
+
 // Bootstrap variables
 $black: #000000
 $white: #FFFFFF
