--- a/assets/sass/_default/partials/_hero.sass
+++ b/assets/sass/_default/partials/_hero.sass
@@ -1,10 +1,7 @@
 .hero
-    background-color: $site
-    @include media-breakpoint-up(md)
-        background-image: url('/assets/images/glyph.svg')
-        background-position: right
-        background-repeat: no-repeat
-        background-size: auto 100%
+    align-items: flex-start
+    background-color: $site-color
+
 
     > picture
         img
