--- a/assets/sass/pages/_pages.sass
+++ b/assets/sass/pages/_pages.sass
@@ -2,8 +2,9 @@
 .pages__page,
 .administrators__taxonomy,
 .administrators__term
+    header[role="banner"],
     .hero
-        background-color: $institut
+        background-color: $institut-color
     .toc
         .active
-            color: $institut
+            color: $institut-color
