--- a/assets/sass/posts/_pages.sass
+++ b/assets/sass/posts/_pages.sass
@@ -4,8 +4,9 @@
 .categories__term,
 .authors__taxonomy,
 .authors__term
+    header[role="banner"],
     .hero
-        background-color: $post
+        background-color: $post-color
     .toc
         .active
-            color: $post
+            color: $post-color
