--- a/assets/sass/programs/_pages.sass
+++ b/assets/sass/programs/_pages.sass
@@ -1,8 +1,9 @@
 .programs__section,
 .teachers__taxonomy,
 .teachers__term
+    header[role="banner"],
     .hero
-        background-color: $diplomes
+        background-color: $program-color
     .toc
         .active
-            color: $diplomes
+            color: $program-color
