--- a/assets/sass/_default/layouts/_header.sass
+++ b/assets/sass/_default/layouts/_header.sass
@@ -3,6 +3,14 @@ header[role="banner"]
     position: sticky
     top: 0
     z-index: 10
+    &::after
+        background-color: rgba(white, .2)
+        bottom: 0
+        content: ''
+        height: 1px
+        left: 0
+        position: absolute
+        width: 100%
 
     .logo
         img
@@ -15,5 +23,6 @@ header[role="banner"]
             & > li
                 & > a,
                 & > span
+                    color: white
                     padding-left: 1rem
                     padding-right: 1rem
