--- a/assets/sass/_theme/_default/base/_fonts.sass
+++ b/assets/sass/_theme/_default/base/_fonts.sass
@@ -1,23 +1,15 @@
 @font-face
     font-display: swap
-    font-family: 'Montserrat'
-    font-style: italic
-    font-weight: 400
-    src: url('../fonts/montserrat/JTUFjIg1_i6t8kCHKm459Wx7xQYXK0vOoz6jq6R9WXh0oJC8MLnbtg.woff') format('woff')
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
+    font-family: 'basier_circle'
+    font-style: normal
+    font-weight: $font-weight-normal
+    src: url('../fonts/Basier-Circle-regular/basiercircle-regular.eot')
+    src: url('../fonts/Basier-Circle-regular/basiercircle-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/Basier-Circle-regular/basiercircle-regular.woff2') format('woff2'), url('../fonts/Basier-Circle-regular/basiercircle-regular.woff') format('woff'), url('../fonts/Basier-Circle-regular/basiercircle-regular.ttf') format('truetype')
 
 @font-face
     font-display: swap
-    font-family: 'Montserrat'
+    font-family: 'basier_circle'
     font-style: normal
-    font-weight: 400
-    src: url('../fonts/montserrat/JTUSjIg1_i6t8kCHKm459WlhyyTh89Y.woff2') format('woff2')
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
-
-@font-face
-    font-display: swap
-    font-family: 'Montserrat'
-    font-style: normal
-    font-weight: 600
-    src: url('../fonts/montserrat/JTUSjIg1_i6t8kCHKm459WlhyyTh89Y.woff2') format('woff2')
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD
+    font-weight: $font-weight-bold
+    src: url('../fonts/Basier-Circle-bold/basiercircle-bold.eot')
+    src: url('../fonts/Basier-Circle-bold/basiercircle-bold.eot?#iefix') format('embedded-opentype'), url('../fonts/Basier-Circle-bold/basiercircle-bold.woff2') format('woff2'), url('../fonts/Basier-Circle-bold/basiercircle-bold.woff') format('woff'), url('../fonts/Basier-Circle-bold/basiercircle-bold.ttf') format('truetype')
