--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -1,10 +1,12 @@
 // Site variables
-$site:      #002539
-$institut:  #176CAF
-$diplomes:  #CA0051
-$post:      #007960
 $recherche: #EB7100
-$header-height: 90px
+
+$site-color: #4C1540
+$institut-color: #176CAF
+$post-color: #4926AF
+$program-color: #26AF5D
+
+$header-height: 102px
 
 $menu-background-color: white
 
@@ -22,58 +24,61 @@ $border-radius-sm: 0
 
 $grid-gutter-width: 1.5rem
 
-$font-family-sans-serif: 'Montserrat', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
-$font-size-root: 1rem
-$font-size-base: 1.125rem
-$line-height-base: 1.666667
-$h1-font-size: $font-size-root * 3.5
-$h2-font-size: $font-size-root * 1.625
-$h3-font-size: $font-size-root * 1.3
+$font-family-sans-serif: 'Basier Circle', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
+$font-size-base: 1rem
+$line-height-base: 1.4
+
+$h1-font-size: 1.875rem
+$h2-font-size: 1.5rem
+$h3-font-size: 1.25rem
+$h4-font-size: 1.125rem
+$h5-font-size: 1rem
 
 $headings-margin-bottom: $grid-gutter-width
-$headings-font-weight: 600
+$headings-font-weight: 500
 
 $font-weight-bold: 600
 $font-weight-bolder: 600
 
-$lead-font-size: px2rem(22)
-$lead-font-weight: 400
-
+// $lead-font-size: px2rem(22)
+// $lead-font-weight: 400
+//
 $breadcrumb-active-color: $white
-$breadcrumb-divider-color: $white
-$breadcrumb-font-size: px2rem(13)
-$breadcrumb-margin-bottom: 0
-
-$card-title-spacer-y: 0
-
-$dropdown-font-size: px2rem(14)
-$dropdown-border-width: 0
-$dropdown-border-radius: 0
-$dropdown-item-padding-x: .75rem
-
-$blockquote-font-size: px2rem(22)
-
-$input-btn-font-family: $font-family-sans-serif
-
-$modal-backdrop-opacity: .9
-
-$nav-link-font-size: px2rem(22)
-$nav-link-padding-y: 0
-$nav-link-padding-x: .75rem
-
-$navbar-brand-padding-y: 0
-$navbar-brand-margin-end: 0
-$navbar-padding-y: $grid-gutter-width
-$navbar-nav-link-padding-x: 1rem
-
-$pagination-border-width: 0
-$pagination-active-bg: transparent
-$pagination-active-color: rgba(black, .65)
-$pagination-disabled-color: #DADADA
-
-$spacer: 1rem
-$spacers: (0: 0, 1: $spacer / 2, 2: $spacer, 3: $spacer * 2, 4: $spacer * 3, 5: $spacer * 6)
-
-$table-th-font-weight: 400
-
-$enable-caret: false
+$breadcrumb-divider-color: rgba($white, .5)
+$breadcrumb-divider: quote(">")
+$breadcrumb-font-size: px2rem(18)
+$breadcrumb-link-color: rgba($white, .5)
+//
+// $card-title-spacer-y: 0
+//
+// $dropdown-font-size: px2rem(14)
+// $dropdown-border-width: 0
+// $dropdown-border-radius: 0
+// $dropdown-item-padding-x: .75rem
+//
+// $blockquote-font-size: px2rem(22)
+//
+// $input-btn-font-family: $font-family-sans-serif
+//
+// $modal-backdrop-opacity: .9
+//
+// $nav-link-font-size: px2rem(22)
+// $nav-link-padding-y: 0
+// $nav-link-padding-x: .75rem
+//
+// $navbar-brand-padding-y: 0
+// $navbar-brand-margin-end: 0
+// $navbar-padding-y: $grid-gutter-width
+// $navbar-nav-link-padding-x: 1rem
+//
+// $pagination-border-width: 0
+// $pagination-active-bg: transparent
+// $pagination-active-color: rgba(black, .65)
+// $pagination-disabled-color: #DADADA
+//
+// $spacer: 1rem
+// $spacers: (0: 0, 1: $spacer / 2, 2: $spacer, 3: $spacer * 2, 4: $spacer * 3, 5: $spacer * 6)
+//
+// $table-th-font-weight: 400
+//
+// $enable-caret: false
