--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -9,6 +9,9 @@
 @import "_default/partials/sticky"
 @import "_default/partials/toc"
 
+@import "_vendors/bootstrap/breadcrumb"
+// @import "_vendors/bootstrap/card"
+
 @import "pages/pages"
 @import "persons/widgets"
 @import "posts/pages"
