--- a/assets/sass/_theme/_default/base/_typography.sass
+++ b/assets/sass/_theme/_default/base/_typography.sass
@@ -24,3 +24,9 @@ p, li
     @include media-breakpoint-up(md)
         font-size: px2rem(22)
         line-height: px2rem(30)
+
+.surtitle
+    font-size: px2rem(24)
+    font-weight: 600
+    line-height: 130%
+    text-transform: uppercase
