--- a/assets/sass/_default/layouts/_header.sass
+++ b/assets/sass/_default/layouts/_header.sass
@@ -1,5 +1,6 @@
 header[role="banner"]
-    background-color: white
+    background-color: $site-color
+    color: white
     position: sticky
     top: 0
     z-index: 10
@@ -18,11 +19,16 @@ header[role="banner"]
             @include media-breakpoint-down(lg)
                 height: 30px
 
+    .nav-level-1
+        & > li
+            & > a,
+            & > span
+                color: white
+
     @include media-breakpoint-up(lg)
         .nav-level-1
             & > li
                 & > a,
                 & > span
-                    color: white
                     padding-left: 1rem
                     padding-right: 1rem
