--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -20,12 +20,9 @@ $primary: $black
 $body-bg: $white
 $body-color: $black
 
-$border-radius: 0
-$border-radius-lg: 0
-$border-radius-sm: 0
-
 $container-max-widths: ( sm: 540px, md: 720px, lg: 960px, xl: 1140px, xxl: 1504px )
-$grid-gutter-width: 4rem
+// $grid-gutter-width: 4rem
+$grid-gutter-width: 3.75rem
 
 $font-family-sans-serif: 'Basier Circle', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 $font-size-base: 1rem
