--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -12,6 +12,8 @@
 @import "_vendors/bootstrap/breadcrumb"
 // @import "_vendors/bootstrap/card"
 
+@import "blocks/blocks"
+@import "blocks/gallery"
 @import "pages/pages"
 @import "persons/widgets"
 @import "posts/pages"
