--- a/assets/sass/_default/partials/_hero.sass
+++ b/assets/sass/_default/partials/_hero.sass
@@ -13,7 +13,11 @@
         margin-top: auto
 
     .toc ol
+        flex-direction: row
+        justify-content: space-between
         margin-top: 0
+        li
+            margin-bottom: 0
         a
             color: white
 
