--- a/layouts/partials/programs/toc.html
+++ b/layouts/partials/programs/toc.html
@@ -2,9 +2,22 @@
 <nav class="toc" id="nav-toc" aria-label="{{ i18n "commons.toc" }}">
   <ol>
     <li>
-      <a class="nav-link" href="#">
-        Public
-      </a>
+      <a class="nav-link" href="#">Public</a>
+    </li>
+    <li>
+      <a class="nav-link" href="#">Objectifs professionnels</a>
+    </li>
+    <li>
+      <a class="nav-link" href="#">Insertion</a>
+    </li>
+    <li>
+      <a class="nav-link" href="#">Organisation pédagogique</a>
+    </li>
+    <li>
+      <a class="nav-link" href="#">Candidatures</a>
+    </li>
+    <li>
+      <a class="nav-link" href="#">Droits d’inscription</a>
     </li>
   </ol>
 </nav>
