--- a/assets/sass/blocks/_gallery.sass
+++ b/assets/sass/blocks/_gallery.sass
@@ -3,6 +3,13 @@
     color: white
     padding-bottom: px2rem(64)
     padding-top: px2rem(64)
+    figure
+        >  a
+            margin-bottom: px2rem(24)
+        figcaption
+            font-size: px2rem(22)
+            font-weight: 500
+            line-height: 140%
     .splide
         display: flex
         flex-direction: column
