--- a/assets/sass/_theme/_default/base/_typography.sass
+++ b/assets/sass/_theme/_default/base/_typography.sass
@@ -26,7 +26,16 @@ p, li
         line-height: px2rem(30)
 
 .surtitle
+    font-family: $headings-font-family
     font-size: px2rem(24)
     font-weight: 600
+    line-height: 130%
+    text-transform: uppercase
+
+.tabtitle
+    font-family: $headings-font-family
+    font-size: px2rem(20)
+    font-weight: 600
+    letter-spacing: -0.01em
     line-height: 130%
     text-transform: uppercase
