--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -10,6 +10,7 @@
 @import "_default/partials/toc"
 
 @import "_vendors/bootstrap/breadcrumb"
+@import "_vendors/bootstrap/container"
 // @import "_vendors/bootstrap/card"
 
 @import "blocks/blocks"
