--- a/assets/sass/pages/_pages.sass
+++ b/assets/sass/pages/_pages.sass
@@ -8,3 +8,19 @@
     .toc
         .active
             color: $institut-color
+
+.pages__section
+    main
+        > div
+            > aside
+                > div
+                    > *
+                        @extend .col-md-4
+                @include media-breakpoint-up(md)
+                    ~ *
+                        .container
+                            > *
+                                &:not(.call_to_action)
+                                    padding-left: col(5)
+                                &.call_to_action
+                                    margin-left: col(5)
