--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -2,7 +2,7 @@
 $recherche: #EB7100
 
 $site-color: #4C1540
-$institut-color: #176CAF
+$institut-color: #001F5C
 $post-color: #4926AF
 $program-color: #26AF5D
 
@@ -20,10 +20,10 @@ $primary: $black
 $body-bg: $white
 $body-color: $black
 
-$container-max-widths: ( sm: 540px, md: 720px, lg: 960px, xl: 1140px, xxl: 1980px )
+// $container-max-widths: ( sm: 540px, md: 720px, lg: 960px, xl: 1140px, xxl: 1980px )
 $grid-gutter-width: 3.75rem
 
-$font-family-sans-serif: 'Basier Circle', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
+$font-family-sans-serif: 'Inter', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 $font-size-base: 1rem
 $line-height-base: 1.4
 
@@ -34,6 +34,7 @@ $h4-font-size: 1.125rem
 $h5-font-size: 1rem
 
 $headings-margin-bottom: $grid-gutter-width
+$headings-font-family: 'Basier Circle', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 $headings-font-weight: 500
 
 $font-weight-bold: 600
@@ -66,10 +67,10 @@ $modal-backdrop-opacity: .9
 // $nav-link-padding-y: 0
 // $nav-link-padding-x: .75rem
 //
-// $navbar-brand-padding-y: 0
-// $navbar-brand-margin-end: 0
-// $navbar-padding-y: $grid-gutter-width
-// $navbar-nav-link-padding-x: 1rem
+$navbar-brand-padding-y: 0
+$navbar-brand-margin-end: 0
+$navbar-padding-y: px2rem(30)
+$navbar-nav-link-padding-x: 1rem
 
 $pagination-border-width: 0
 $pagination-active-bg: transparent
