--- a/assets/sass/_default/partials/_hero.sass
+++ b/assets/sass/_default/partials/_hero.sass
@@ -4,6 +4,8 @@
     flex-direction: column
     padding-bottom: 0
     padding-top: px2rem(32)
+    @include media-breakpoint-up(xl)
+        margin-bottom: px2rem(128)
 
     p
         margin-bottom: 0
