--- a/assets/sass/_vendors/bootstrap/_breadcrumb.sass
+++ b/assets/sass/_vendors/bootstrap/_breadcrumb.sass
@@ -1,8 +1,15 @@
 .breadcrumb
     &-item
         font-size: $breadcrumb-font-size
+        a
+            color: $breadcrumb-link-color
+            transition: color .3s ease, text-decoration-color .3s ease
+            &:hover
+                color: white
+
     &-item + &-item
         &::before
             @extend .icon
-            @extend .icon-caret
+            @extend .icon-caret-right
             font-size: px2rem(8)
+            line-height: inherit
