--- a/assets/sass/_theme/_default/base/_typography.sass
+++ b/assets/sass/_theme/_default/base/_typography.sass
@@ -2,28 +2,27 @@ h1
     font-weight: 600
     @include media-breakpoint-up(md)
         font-size: px2rem(60)
-        line-height: px2rem(72)
+        line-height: 120%
 h2
     @include media-breakpoint-up(md)
         font-size: px2rem(60)
-        line-height: px2rem(66)
+        line-height: 130%
 h3
     @include media-breakpoint-up(md)
         font-size: px2rem(40)
-        line-height: px2rem(44)
+        line-height: 110%
 h4
     @include media-breakpoint-up(md)
         font-size: px2rem(28)
-        line-height: px2rem(36)
+        line-height: 130%
 h5
     @include media-breakpoint-up(md)
         font-size: px2rem(24)
-        line-height: px2rem(31)
+        line-height: 130%
 
 p, li
     @include media-breakpoint-up(md)
         font-size: px2rem(22)
-        line-height: px2rem(30)
 
 .surtitle
     font-family: $headings-font-family
