--- a/assets/sass/_vendors/bootstrap/_breadcrumb.sass
+++ b/assets/sass/_vendors/bootstrap/_breadcrumb.sass
@@ -12,4 +12,4 @@
             @extend .icon
             @extend .icon-caret-right
             font-size: px2rem(8)
-            line-height: inherit
+            line-height: px2rem(24)
