--- a/assets/sass/blocks/_gallery.sass
+++ b/assets/sass/blocks/_gallery.sass
@@ -3,6 +3,9 @@
     color: white
     padding-bottom: px2rem(64)
     padding-top: px2rem(64)
+    .top
+        h2
+            @extend .surtitle
     figure
         >  a
             margin-bottom: px2rem(24)
