--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -8,11 +8,12 @@
 @import "_default/partials/menu"
 @import "_default/partials/sticky"
 @import "_default/partials/toc"
+@import "_default/partials/top"
 
 @import "_vendors/bootstrap/breadcrumb"
 @import "_vendors/bootstrap/container"
 
-@import "blocks/blocks"
+@import "blocks/chapter"
 @import "blocks/gallery"
 
 @import "pages/pages"
