--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -33,7 +33,7 @@ $h3-font-size: 1.25rem
 $h4-font-size: 1.125rem
 $h5-font-size: 1rem
 
-$headings-margin-bottom: $grid-gutter-width
+$headings-margin-bottom: px2rem(24)
 $headings-font-family: 'Basier Circle', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 $headings-font-weight: 500
 
