--- a/assets/sass/_theme/_default/base/_typography.sass
+++ b/assets/sass/_theme/_default/base/_typography.sass
@@ -38,3 +38,7 @@ p, li
     letter-spacing: -0.01em
     line-height: 130%
     text-transform: uppercase
+
+[itemprop="articleBody"]
+    h2
+        @extend .h4
