--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -77,9 +77,6 @@ $pagination-active-bg: transparent
 $pagination-active-color: rgba(black, .65)
 $pagination-disabled-color: #DADADA
 
-// $spacer: 1rem
-// $spacers: (0: 0, 1: $spacer / 2, 2: $spacer, 3: $spacer * 2, 4: $spacer * 3, 5: $spacer * 6)
-//
-// $table-th-font-weight: 400
-//
+$spacer: 1.5rem
+
 // $enable-caret: false
