--- a/assets/sass/_vendors/bootstrap/_breadcrumb.sass
+++ b/assets/sass/_vendors/bootstrap/_breadcrumb.sass
@@ -8,6 +8,7 @@
                 color: white
 
     &-item + &-item
+        line-height: px2rem(22)
         &::before
             @extend .icon
             @extend .icon-caret-right
