--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -32,6 +32,7 @@ $h2-font-size: 1.5rem
 $h3-font-size: 1.25rem
 $h4-font-size: 1.125rem
 $h5-font-size: 1rem
+$h6-font-size: 1rem
 
 $headings-margin-bottom: px2rem(24)
 $headings-font-family: 'Basier Circle', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
@@ -40,24 +41,24 @@ $headings-font-weight: 500
 $font-weight-bold: 600
 $font-weight-bolder: 600
 
-// $lead-font-size: px2rem(22)
-// $lead-font-weight: 400
-//
+$lead-font-size: 1.25rem
+$lead-font-weight: 500
+
 $breadcrumb-active-color: $white
 $breadcrumb-divider-color: rgba($white, .5)
 $breadcrumb-divider: quote(">")
 $breadcrumb-font-size: px2rem(18)
 $breadcrumb-link-color: rgba($white, .5)
 $breadcrumb-item-padding-x: px2rem(18)
-//
+
 // $card-title-spacer-y: 0
 //
 // $dropdown-font-size: px2rem(14)
 // $dropdown-border-width: 0
 // $dropdown-border-radius: 0
 // $dropdown-item-padding-x: .75rem
-//
-// $blockquote-font-size: px2rem(22)
+
+$blockquote-font-size: 1.875rem
 
 $input-btn-font-family: $font-family-sans-serif
 
