--- a/assets/sass/posts/_pages.sass
+++ b/assets/sass/posts/_pages.sass
@@ -10,3 +10,15 @@
     .toc
         .active
             color: $post-color
+    .hero
+        > div:last-child
+            .container
+                align-items: center
+                display: flex
+                time, p
+                    font-size: px2rem(18)
+                time + p
+                    margin-left: $spacer
+    aside
+        p
+            @extend .h5
