--- a/assets/sass/_default/partials/_hero.sass
+++ b/assets/sass/_default/partials/_hero.sass
@@ -14,14 +14,15 @@
         background: rgba(black, .1)
         margin-top: auto
 
-    .toc ol
-        flex-direction: row
-        justify-content: space-between
-        margin-top: 0
-        li
-            margin-bottom: 0
-        a
-            color: white
+    .toc
+        ol
+            flex-direction: row
+            justify-content: space-between
+            margin-top: 0
+            li
+                margin-bottom: 0
+            a
+                color: white
 
     > div:first-of-type
         div
