--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -17,6 +17,7 @@
 @import "blocks/chapter"
 @import "blocks/gallery"
 
+@import "home/pages"
 @import "pages/pages"
 @import "posts/pages"
 @import "programs/pages"
